@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.4.20'
     id 'com.github.johnrengelman.shadow' version '5.2.0'
-    id "com.vanniktech.maven.publish" version "0.11.1"
+    id "com.vanniktech.maven.publish" version "0.19.0"
     id "org.jlleitschuh.gradle.ktlint" version "9.2.1"
 }
 
@@ -19,11 +19,13 @@ ktlint {
 dependencies {
     // This includes the kotlin runtime in to the fat jar
     implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.6.25'
-    implementation 'com.github.cretz.kastree:kastree-ast-psi:0.4.0'
-    implementation 'com.github.ajalt:clikt:2.6.0'
+    implementation "com.github.ajalt.clikt:clikt:3.2.0"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    implementation "org.jetbrains.kotlin:kotlin-compiler-embeddable:1.4.20"
     testImplementation  "junit:junit:4.13"
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.4.20"
+    testImplementation "org.jetbrains.kotlin:kotlin-test:1.4.20"
 }
 
 compileKotlin {
@@ -31,6 +33,12 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+test {
+    // This is required for an issue integrating Kotlin with newer JVMs:
+    // https://youtrack.jetbrains.com/issue/IDEA-248785
+    jvmArgs '--illegal-access=permit'
 }
 
 jar {
